Day 2 initial working page

--- a/page.html
+++ b/page.html
@@ -19,9 +19,11 @@
             </tr>
             </thead>
             <tbody>
-    
+
             </tbody>
         </table>
+        <h1>Library</h1>
+        <a href="addBook.html">Add New Book</a>
         <script src ="Book.js"></script>
     </div>
     
