Day 3 Implement error/exception handling and add styling to pages

--- a/page.html
+++ b/page.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="pg.css">
     <title>Library</title>
 </head>
 <body>
     <div>
+        <h1>Library</h1>
         <table id ="bookTable">
             <thead>
                 <tr>
@@ -22,10 +24,10 @@
 
             </tbody>
         </table>
-        <h1>Library</h1>
-        <a href="addBook.html">Add New Book</a>
+    <div class="btn-div">
+        <a class="btn-link" href="addBook.html">Add New Book</a>
         <script src ="Book.js"></script>
+    </div> 
     </div>
-    
 </body>
 </html>
