--- a/addBook.html
+++ b/addBook.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="form.css">
     <title>Add New Book</title>
 </head>
 <body>
@@ -11,11 +12,19 @@
     </h1>
     <form id="book-form">
         <fieldset>
-            <label for="book-name">Enter the Book Name: <input id="book-name" name="book-name" type="text"></label><br>
-            <label for="book-author">Specify the Author's Name: <input id="book-author" name="book-author" type="text"></label><br>
-            <label for="book-pages">Number of Page: <input id="book-pages" name="book-pages" type="text"></label><br>
+            <label for="book-id">Enter the Book ID: <input id="book-id" name="book-id" type="text"></label>
+            <br>
+            <label for="book-name">Enter the Book Name: <input id="book-name" name="book-name" type="text"></label>
+            <br>
+            <label for="book-author">Specify the Author's Name: <input id="book-author" name="book-author" type="text"></label>
+            <br>
+            <label for="book-pages">Number of Page: <input id="book-pages" name="book-pages" type="text"></label>
+            <br>
+            <label class="checkbox" for="book-read">Have you read?<input id="book-read" name="book-read" type="checkbox"></label>
+            <br>
         </fieldset>
-        <input type="submit" value="submit">
+        <div><input type="submit" value="submit"></div>
+        
     </form>
     <script src="Form.js"></script>    
 </body>
